--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,10 @@
          <version>4.0.1</version>
          <scope>provided</scope>
       </dependency>
-
+	<dependency>
+    <groupId>org.json</groupId>
+    <artifactId>json</artifactId>
+    <version>20210307</version>
+	</dependency>
    </dependencies>
 </project>
