--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -33,16 +33,29 @@
 	</servlet-mapping>
 	
 <!-- 문자 인코딩 필터 설정 -->
-      <filter>
-         <filter-name>CharacterEncodingFilter</filter-name>
-         <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
-         <init-param>
-            <param-name>encoding</param-name>
-            <param-value>UTF-8</param-value>
-         </init-param>
-      </filter>
-      <filter-mapping>
-         <filter-name>CharacterEncodingFilter</filter-name>
-         <url-pattern>/*</url-pattern>
-      </filter-mapping>
+    <filter>
+
+		<filter-name>encodingFilter</filter-name>
+
+		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+
+		<init-param>
+
+			<param-name>encoding</param-name>
+
+			<param-value>UTF-8</param-value>
+
+		</init-param>
+
+	</filter>
+
+
+
+	<filter-mapping>
+
+		<filter-name>encodingFilter</filter-name>
+
+		<url-pattern>/*</url-pattern>
+
+	</filter-mapping>
 </web-app>
