--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,10 @@
    	 <version>2.0.6</version>
 	</dependency>
 	
-	
+	<dependency>
+    <groupId>commons-fileupload</groupId>
+    <artifactId>commons-fileupload</artifactId>
+    <version>1.4</version>
+</dependency>
    </dependencies>
 </project>
